[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/UI/ListMonsterUI/ListMonsterLabUI/ListMonsterLabUI.gd" type="Script" id=2]

[node name="ListMonsterLabUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
custom_constants/separation = 18
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="HBoxContainer"]
margin_bottom = 64.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 18.0
margin_right = 116.0
margin_bottom = 64.0
custom_constants/separation = 14
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameLabel" type="Label" parent="HBoxContainer/LabelContainer"]
margin_top = 11.0
margin_right = 98.0
margin_bottom = 25.0
text = "NOMNOM"

[node name="ScientistLvlLabel" type="Label" parent="HBoxContainer/LabelContainer"]
margin_top = 39.0
margin_right = 98.0
margin_bottom = 53.0
text = "Scientist lvl. XX"

[node name="LeaveButton" type="Button" parent="HBoxContainer"]
margin_left = 134.0
margin_top = 22.0
margin_right = 154.0
margin_bottom = 42.0
size_flags_horizontal = 4
size_flags_vertical = 4
text = "X"
__meta__ = {
"_edit_use_anchors_": false
}
